<resources>
    <string name="app_name">SolarSystem</string>
    <string name="welcome_title">Aperte o cinto</string>
    <string name="start_your_journey">Comece sua jornada \n pelo sistema solar.</string>
    <string name="start_now">Começar agora</string>
    <string name="ready">Pronto para a decolagem?</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="gallery">Gallery</string>
    <string name="hello">Olá, Daniel</string>
    <string name="learn_today">O que você vai aprender hoje?</string>
    <string name="search_hint">Procure planetas, asteroides, estrelas</string>
    <string name="category">Categorias</string>
    <string name="asteroids">Asteroides</string>
    <string name="stars">Estrelas</string>
    <string name="galaxies">Galáxias</string>
    <string name="planet">Planet</string>
    <string name="planets">Planetas</string>
    <string name="mars_desc">Marte é o quarto planeta a partir do Sol, o segundo menor do Sistema Solar. Batizado em homenagem</string>
    <string name="continue_reading">Continuar lendo</string>
</resources>